Added sfile.v, sline.v, spram.v

--- a/src/fpga/current/quartus/top.qsf
+++ b/src/fpga/current/quartus/top.qsf
@@ -209,6 +209,9 @@ set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
 set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
 set_global_assignment -name SMART_RECOMPILE OFF
+set_global_assignment -name VERILOG_FILE ../video/sfile.v
+set_global_assignment -name VERILOG_FILE ../video/pram.v
+set_global_assignment -name VERILOG_FILE ../video/sline.v
 set_global_assignment -name VERILOG_FILE ../sound/covox.v
 set_global_assignment -name VERILOG_FILE ../video/sprites.v
 set_global_assignment -name VERILOG_FILE ../z80/zdos.v
