SPU: got rid of RSST FSM, need to play with cbeg/post_cbeg/pre_cend/cend, untested

--- a/src/fpga/current/quartus/top.qsf
+++ b/src/fpga/current/quartus/top.qsf
@@ -255,3 +255,4 @@ set_global_assignment -name VERILOG_FILE ../dram/arbiter.v
 set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
+set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
