--- a/src/fpga/current/quartus/top.qsf
+++ b/src/fpga/current/quartus/top.qsf
@@ -230,6 +230,9 @@ set_global_assignment -name ADD_PASS_THROUGH_LOGIC_TO_INFERRED_RAMS ON
 set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
+set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
+set_global_assignment -name VERILOG_FILE ../sound/hus_mem.v
+set_global_assignment -name VERILOG_FILE ../sound/hus.v
 set_global_assignment -name VERILOG_FILE ../video/spu_mem.v
 set_global_assignment -name VERILOG_FILE ../sound/covox.v
 set_global_assignment -name VERILOG_FILE ../video/sprites.v
@@ -255,4 +258,3 @@ set_global_assignment -name VERILOG_FILE ../dram/arbiter.v
 set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
-set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
