Some neats and syntax corrections, stub

--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -231,26 +231,34 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
 set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
-set_global_assignment -name VERILOG_FILE ../video/tile_mem.v
+set_global_assignment -name VERILOG_FILE ../video/video_vga_sync_h.v
+set_global_assignment -name VERILOG_FILE ../video/video_addrgen.v
+set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
+set_global_assignment -name VERILOG_FILE ../video/video_modedecode.v
+set_global_assignment -name VERILOG_FILE ../video/video_outmux.v
+set_global_assignment -name VERILOG_FILE ../video/video_palframe.v
+set_global_assignment -name VERILOG_FILE ../video/video_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_spu.v
+set_global_assignment -name VERILOG_FILE ../video/video_spu_mem.v
+set_global_assignment -name VERILOG_FILE ../video/video_sync_h.v
+set_global_assignment -name VERILOG_FILE ../video/video_sync_v.v
+set_global_assignment -name VERILOG_FILE ../video/video_synch.v
+set_global_assignment -name VERILOG_FILE ../video/video_syncv.v
+set_global_assignment -name VERILOG_FILE ../video/video_tiles.v
+set_global_assignment -name VERILOG_FILE ../video/video_tiles_mem.v
+set_global_assignment -name VERILOG_FILE ../video/video_top.v
+set_global_assignment -name VERILOG_FILE ../video/video_vga_double.v
 set_global_assignment -name VERILOG_FILE ../z80/zmaps.v
-set_global_assignment -name VERILOG_FILE ../video/spu_mem.v
 set_global_assignment -name VERILOG_FILE ../sound/covox.v
-set_global_assignment -name VERILOG_FILE ../video/sprites.v
 set_global_assignment -name VERILOG_FILE ../z80/zdos.v
 set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
-set_global_assignment -name VERILOG_FILE ../vga/vga_double.v
 set_global_assignment -name VERILOG_FILE ../z80/zwait.v
-set_global_assignment -name VERILOG_FILE ../vga/vga_synch.v
 set_global_assignment -name VERILOG_FILE ../z80/zkbdmus.v
 set_global_assignment -name VERILOG_FILE ../z80/zports.v
 set_global_assignment -name VERILOG_FILE ../z80/zclock.v
 set_global_assignment -name VERILOG_FILE ../z80/zint.v
 set_global_assignment -name VERILOG_FILE ../z80/zmem.v
 set_global_assignment -name VERILOG_FILE ../z80/zbus.v
-set_global_assignment -name VERILOG_FILE ../video/videoout.v
-set_global_assignment -name VERILOG_FILE ../video/synch.v
-set_global_assignment -name VERILOG_FILE ../video/syncv.v
-set_global_assignment -name VERILOG_FILE ../video/fetch.v
 set_global_assignment -name VERILOG_FILE ../vg93/vg93.v
 set_global_assignment -name VERILOG_FILE ../slave/slavespi.v
 set_global_assignment -name VERILOG_FILE ../dram/dram.v
