--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -28,7 +28,7 @@ set_global_assignment -name FAMILY ACEX1K
 set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 6.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:03:44  NOVEMBER 07, 2009"
-set_global_assignment -name LAST_QUARTUS_VERSION 6.1
+set_global_assignment -name LAST_QUARTUS_VERSION "7.2 SP3"
 set_global_assignment -name DEVICE_FILTER_PACKAGE "ANY QFP"
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 208
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
@@ -209,28 +209,11 @@ set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
 set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
 set_global_assignment -name SMART_RECOMPILE OFF
-set_global_assignment -name REMOVE_REDUNDANT_LOGIC_CELLS OFF
-set_global_assignment -name SAFE_STATE_MACHINE OFF
-set_global_assignment -name STATE_MACHINE_PROCESSING AUTO
-set_global_assignment -name REMOVE_DUPLICATE_REGISTERS ON
-set_global_assignment -name ALLOW_POWER_UP_DONT_CARE ON
-set_global_assignment -name SUPPRESS_REG_MINIMIZATION_MSG ON
-set_global_assignment -name NOT_GATE_PUSH_BACK ON
-set_global_assignment -name IGNORE_VERILOG_INITIAL_CONSTRUCTS OFF
-set_global_assignment -name IGNORE_CARRY_BUFFERS OFF
-set_global_assignment -name IGNORE_CASCADE_BUFFERS OFF
-set_global_assignment -name IGNORE_GLOBAL_BUFFERS OFF
-set_global_assignment -name IGNORE_ROW_GLOBAL_BUFFERS OFF
-set_global_assignment -name IGNORE_LCELL_BUFFERS OFF
-set_global_assignment -name EXTRACT_VERILOG_STATE_MACHINES ON
-set_global_assignment -name CASCADE_CHAIN_LENGTH 2
-set_global_assignment -name AUTO_RESOURCE_SHARING OFF
-set_global_assignment -name AUTO_IMPLEMENT_IN_ROM OFF
-set_global_assignment -name ADD_PASS_THROUGH_LOGIC_TO_INFERRED_RAMS ON
-set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
-set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
-set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
-set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VERILOG_FILE ../z80/znmi.v
+set_global_assignment -name VERILOG_FILE ../sound/sound.v
+set_global_assignment -name VERILOG_FILE ../video/video_fontrom.v
 set_global_assignment -name VERILOG_FILE ../video/video_vga_sync_h.v
 set_global_assignment -name VERILOG_FILE ../video/video_addrgen.v
 set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
@@ -238,17 +221,10 @@ set_global_assignment -name VERILOG_FILE ../video/video_modedecode.v
 set_global_assignment -name VERILOG_FILE ../video/video_outmux.v
 set_global_assignment -name VERILOG_FILE ../video/video_palframe.v
 set_global_assignment -name VERILOG_FILE ../video/video_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_spu.v
-set_global_assignment -name VERILOG_FILE ../video/video_spu_mem.v
 set_global_assignment -name VERILOG_FILE ../video/video_sync_h.v
 set_global_assignment -name VERILOG_FILE ../video/video_sync_v.v
-set_global_assignment -name VERILOG_FILE ../video/video_synch.v
-set_global_assignment -name VERILOG_FILE ../video/video_syncv.v
-set_global_assignment -name VERILOG_FILE ../video/video_tiles_mem.v
 set_global_assignment -name VERILOG_FILE ../video/video_top.v
 set_global_assignment -name VERILOG_FILE ../video/video_vga_double.v
-set_global_assignment -name VERILOG_FILE ../z80/zmaps.v
-set_global_assignment -name VERILOG_FILE ../sound/covox.v
 set_global_assignment -name VERILOG_FILE ../z80/zdos.v
 set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
 set_global_assignment -name VERILOG_FILE ../z80/zwait.v
@@ -265,3 +241,4 @@ set_global_assignment -name VERILOG_FILE ../dram/arbiter.v
 set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
+set_global_assignment -name MIF_FILE ../video/r0bat_font.mif
