--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -216,6 +216,7 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
 
+set_global_assignment -name VERILOG_FILE ../video/video_sync.v
 set_global_assignment -name VERILOG_FILE ../common/clock.v
 set_global_assignment -name VERILOG_FILE ../z80/znmi.v
 set_global_assignment -name VERILOG_FILE ../sound/sound.v
@@ -227,8 +228,6 @@ set_global_assignment -name VERILOG_FILE ../video/video_modedecode.v
 set_global_assignment -name VERILOG_FILE ../video/video_outmux.v
 set_global_assignment -name VERILOG_FILE ../video/video_palframe.v
 set_global_assignment -name VERILOG_FILE ../video/video_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_sync_h.v
-set_global_assignment -name VERILOG_FILE ../video/video_sync_v.v
 set_global_assignment -name VERILOG_FILE ../video/video_top.v
 set_global_assignment -name VERILOG_FILE ../video/video_vga_double.v
 set_global_assignment -name VERILOG_FILE ../z80/zdos.v
