--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -23,15 +23,17 @@
 # and any changes you make may be lost or overwritten.
 
 
-set_global_assignment -name DEVICE "EP1K50QC208-3"
-set_global_assignment -name FAMILY ACEX1K
-set_global_assignment -name TOP_LEVEL_ENTITY top
+
+# Project-Wide Assignments
+# ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 6.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:03:44  NOVEMBER 07, 2009"
 set_global_assignment -name LAST_QUARTUS_VERSION 6.1
-set_global_assignment -name DEVICE_FILTER_PACKAGE "ANY QFP"
-set_global_assignment -name DEVICE_FILTER_PIN_COUNT 208
-set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
+set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
+set_global_assignment -name SMART_RECOMPILE OFF
+
+# Pin & Location Assignments
+# ==========================
 set_location_assignment PIN_7 -to iorq_n
 set_location_assignment PIN_8 -to mreq_n
 set_location_assignment PIN_9 -to nmi_n
@@ -179,45 +181,113 @@ set_location_assignment PIN_206 -to rd[1]
 set_location_assignment PIN_207 -to rd[15]
 set_location_assignment PIN_208 -to rd[0]
 set_location_assignment PIN_90 -to ide_d[13]
-set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
-set_instance_assignment -name FAST_OUTPUT_REGISTER OFF -to clkz_out
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
-set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
-set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
-set_instance_assignment -name CUT ON -from rddata -to zd_out
-set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
-set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
-set_global_assignment -name FMAX_REQUIREMENT "112 MHz" -section_id "FPGA clock"
-set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
-set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
-set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
-set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
-set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
-set_global_assignment -name GENERATE_RBF_FILE ON
-set_global_assignment -name ON_CHIP_BITSTREAM_DECOMPRESSION OFF
-set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
-set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
-set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
-set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
-set_global_assignment -name SMART_RECOMPILE OFF
+
+# Analysis & Synthesis Assignments
+# ================================
+set_global_assignment -name FAMILY ACEX1K
+set_global_assignment -name TOP_LEVEL_ENTITY top
+set_global_assignment -name DEVICE_FILTER_PACKAGE "ANY QFP"
+set_global_assignment -name DEVICE_FILTER_PIN_COUNT 208
+set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
-set_instance_assignment -name CUT ON -from clkz_in -to fclk
+
+# Fitter Assignments
+# ==================
+set_global_assignment -name DEVICE "EP1K50QC208-3"
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
+set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
 
+# Assembler Assignments
+# =====================
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name GENERATE_RBF_FILE ON
+set_global_assignment -name ON_CHIP_BITSTREAM_DECOMPRESSION OFF
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
+
+# Simulator Assignments
+# =====================
+set_global_assignment -name ADD_DEFAULT_PINS_TO_SIMULATION_OUTPUT_WAVEFORMS OFF
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
+
+# start CLOCK(Z80 clock)
+# ----------------------
+
+	# Classic Timing Assignments
+	# ==========================
+	set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
+	set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
+	set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
+
+# end CLOCK(Z80 clock)
+# --------------------
+
+# start CLOCK(FPGA clock)
+# -----------------------
+
+	# Classic Timing Assignments
+	# ==========================
+	set_global_assignment -name FMAX_REQUIREMENT "112 MHz" -section_id "FPGA clock"
+
+# end CLOCK(FPGA clock)
+# ---------------------
+
+# start CLOCK(SPI clock)
+# ----------------------
+
+	# Classic Timing Assignments
+	# ==========================
+	set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
+
+# end CLOCK(SPI clock)
+# --------------------
+
+# -----------------
+# start ENTITY(top)
+
+	# Pin & Location Assignments
+	# ==========================
+	set_instance_assignment -name FAST_OUTPUT_REGISTER OFF -to clkz_out
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu
+
+	# Classic Timing Assignments
+	# ==========================
+	set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
+	set_instance_assignment -name CUT ON -from rddata -to zd_out
+	set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
+	set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
+	set_instance_assignment -name CUT ON -from clkz_in -to fclk
+
+	# Fitter Assignments
+	# ==================
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
+
+# end ENTITY(top)
+# ---------------
+set_global_assignment -name MIF_FILE ../video/test_cram.mif
+set_global_assignment -name MIF_FILE ../video/test_vram.mif
+set_global_assignment -name VERILOG_FILE ../video/video_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
+set_global_assignment -name VERILOG_FILE ../video/video_addr.v
+set_global_assignment -name VERILOG_FILE ../video/video_out.v
+set_global_assignment -name VERILOG_FILE ../video/video_vga.v
 set_global_assignment -name VERILOG_FILE ../video/video_sync.v
 set_global_assignment -name VERILOG_FILE ../video/video_top.v
+set_global_assignment -name VERILOG_FILE ../video/video_cmem.v
+set_global_assignment -name VERILOG_FILE ../video/video_vmem.v
 set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
 set_global_assignment -name VERILOG_FILE ../sound/sound.v
 set_global_assignment -name VERILOG_FILE ../z80/znmi.v
