Added video PWM, raster resolution, some #nnBF ports, stable, border becomes black on BASIC reset (why?)

--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -277,16 +277,16 @@ set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
 
 # end ENTITY(top)
 # ---------------
-set_global_assignment -name MIF_FILE ../video/test_cram.mif
-set_global_assignment -name MIF_FILE ../video/test_vram.mif
-set_global_assignment -name VERILOG_FILE ../video/video_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
-set_global_assignment -name VERILOG_FILE ../video/video_addr.v
-set_global_assignment -name VERILOG_FILE ../video/video_out.v
-set_global_assignment -name VERILOG_FILE ../video/video_vga.v
-set_global_assignment -name VERILOG_FILE ../video/video_sync.v
 set_global_assignment -name VERILOG_FILE ../video/video_top.v
+set_global_assignment -name VERILOG_FILE ../video/video_mode.v
+set_global_assignment -name VERILOG_FILE ../video/video_sync.v
+set_global_assignment -name VERILOG_FILE ../video/video_addr.v
+set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
+set_global_assignment -name VERILOG_FILE ../video/video_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_vga.v
+set_global_assignment -name VERILOG_FILE ../video/video_out.v
 set_global_assignment -name VERILOG_FILE ../video/video_cmem.v
+set_global_assignment -name MIF_FILE ../video/test_cram.mif
 set_global_assignment -name VERILOG_FILE ../video/video_vmem.v
 set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
 set_global_assignment -name VERILOG_FILE ../sound/sound.v
