--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -280,6 +280,12 @@ set_global_assignment -name VERILOG_FILE ../video/video_mode.v
 set_global_assignment -name VERILOG_FILE ../video/video_sync.v
 set_global_assignment -name VERILOG_FILE ../video/video_cntr.v
 set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
+set_global_assignment -name VERILOG_FILE ../video/video_ts.v
+set_global_assignment -name VERILOG_FILE ../video/video_sf_ys.v
+set_global_assignment -name VERILOG_FILE ../video/video_tmbuf.v
+set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_tsbuf0.v
+set_global_assignment -name VERILOG_FILE ../video/video_tsbuf1.v
 set_global_assignment -name VERILOG_FILE ../video/video_render.v
 set_global_assignment -name VERILOG_FILE ../video/video_vga.v
 set_global_assignment -name VERILOG_FILE ../video/video_out.v
@@ -308,3 +314,5 @@ set_global_assignment -name VERILOG_FILE ../common/clock.v
 set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
+set_global_assignment -name MIF_FILE ../video/tsbuf_test.mif
+set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
