--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -28,7 +28,7 @@
 # ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 6.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:03:44  NOVEMBER 07, 2009"
-set_global_assignment -name LAST_QUARTUS_VERSION 6.1
+set_global_assignment -name LAST_QUARTUS_VERSION "7.2 SP3"
 set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
 set_global_assignment -name SMART_RECOMPILE OFF
 
@@ -185,12 +185,13 @@ set_location_assignment PIN_90 -to ide_d[13]
 # Analysis & Synthesis Assignments
 # ================================
 set_global_assignment -name FAMILY ACEX1K
-set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name DEVICE_FILTER_PACKAGE "ANY QFP"
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 208
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
+set_global_assignment -name TOP_LEVEL_ENTITY top
 
 # Fitter Assignments
 # ==================
@@ -200,6 +201,7 @@ set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
+set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
 
 # Assembler Assignments
 # =====================
@@ -218,9 +220,9 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
-set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
-set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
+	set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
+	set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
+	set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
 
 # end CLOCK(Z80 clock)
 # --------------------
@@ -230,7 +232,7 @@ set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 cloc
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name FMAX_REQUIREMENT "56 MHz" -section_id "FPGA clock"
+	set_global_assignment -name FMAX_REQUIREMENT "56 MHz" -section_id "FPGA clock"
 
 # end CLOCK(FPGA clock)
 # ---------------------
@@ -240,7 +242,7 @@ set_global_assignment -name FMAX_REQUIREMENT "56 MHz" -section_id "FPGA clock"
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
+	set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
 
 # end CLOCK(SPI clock)
 # --------------------
@@ -250,35 +252,49 @@ set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock
 
 	# Pin & Location Assignments
 	# ==========================
-set_instance_assignment -name FAST_OUTPUT_REGISTER OFF -to clkz_out
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[0]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[1]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[2]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[3]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[4]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[5]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[6]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[7]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[8]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[9]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[0]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[1]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[0]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[1]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[0]
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[1]
 
 	# Classic Timing Assignments
 	# ==========================
-set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
-set_instance_assignment -name CUT ON -from rddata -to zd_out
-set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
-set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
-set_instance_assignment -name CUT ON -from clkz_in -to fclk
+	set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
+	set_instance_assignment -name CUT ON -from rddata -to zd_out
+	set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
+	set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
+	set_instance_assignment -name CUT ON -from clkz_in -to fclk
 
 	# Fitter Assignments
 	# ==================
-set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
-set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
 
 # end ENTITY(top)
 # ---------------
-set_global_assignment -name FLEX10K_OPTIMIZATION_TECHNIQUE AREA
 set_global_assignment -name VERILOG_FILE ../video/video_top.v
 set_global_assignment -name VERILOG_FILE ../video/video_mode.v
 set_global_assignment -name VERILOG_FILE ../video/video_sync.v
-set_global_assignment -name VERILOG_FILE ../video/video_cntr.v
 set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
 set_global_assignment -name VERILOG_FILE ../video/video_ts.v
 set_global_assignment -name VERILOG_FILE ../video/video_sf_ys.v
@@ -287,7 +303,6 @@ set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
 set_global_assignment -name VERILOG_FILE ../video/video_tsbuf0.v
 set_global_assignment -name VERILOG_FILE ../video/video_tsbuf1.v
 set_global_assignment -name VERILOG_FILE ../video/video_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_vga.v
 set_global_assignment -name VERILOG_FILE ../video/video_out.v
 set_global_assignment -name VERILOG_FILE ../video/video_cram.v
 set_global_assignment -name MIF_FILE ../video/test_cram.mif
@@ -315,4 +330,4 @@ set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
 set_global_assignment -name MIF_FILE ../video/tsbuf_test.mif
-set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
+set_global_assignment -name NUMBER_OF_PATHS_TO_REPORT 2000
