Migrated to 28MHz, all timings are OK by now, border artifacts fixed, unified vplex processing, dram.v re-factored, INT position defaulted to 2, now full Unreal sync

--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -220,9 +220,9 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
-	set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
-	set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
+set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
+set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
+set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
 
 # end CLOCK(Z80 clock)
 # --------------------
@@ -232,7 +232,7 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name FMAX_REQUIREMENT "56 MHz" -section_id "FPGA clock"
+set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
 
 # end CLOCK(FPGA clock)
 # ---------------------
@@ -242,7 +242,7 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
+set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
 
 # end CLOCK(SPI clock)
 # --------------------
@@ -253,34 +253,19 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 	# Pin & Location Assignments
 	# ==========================
 	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[0]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[1]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[2]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[3]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[4]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[5]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[6]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[7]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[8]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to ra[9]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[0]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[1]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[0]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[1]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[0]
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[1]
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[0] -disable
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[1] -disable
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[0] -disable
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[1] -disable
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[0] -disable
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[1] -disable
 
 	# Classic Timing Assignments
 	# ==========================
-	set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
+set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
 	set_instance_assignment -name CUT ON -from rddata -to zd_out
-	set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
-	set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
+set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
+set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
 	set_instance_assignment -name CUT ON -from clkz_in -to fclk
 
 	# Fitter Assignments
