--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -1,4 +1,4 @@
-# Copyright (C) 1991-2006 Altera Corporation
+# Copyright (C) 1991-2007 Altera Corporation
 # Your use of Altera Corporation's design tools, logic functions 
 # and other software and tools, and its AMPP partner logic 
 # functions, and any output files from any of the foregoing 
@@ -31,6 +31,45 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:03:44  NOVEMBER 07, 2
 set_global_assignment -name LAST_QUARTUS_VERSION "7.2 SP3"
 set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
 set_global_assignment -name SMART_RECOMPILE OFF
+set_global_assignment -name VERILOG_FILE ../mem/dma.v
+set_global_assignment -name VERILOG_FILE ../video/video_top.v
+set_global_assignment -name VERILOG_FILE ../video/video_mode.v
+set_global_assignment -name VERILOG_FILE ../video/video_sync.v
+set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
+set_global_assignment -name VERILOG_FILE ../video/video_ts.v
+set_global_assignment -name VERILOG_FILE ../video/video_sf_ys.v
+set_global_assignment -name VERILOG_FILE ../video/video_tmbuf.v
+set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_tsbuf0.v
+set_global_assignment -name VERILOG_FILE ../video/video_tsbuf1.v
+set_global_assignment -name VERILOG_FILE ../video/video_render.v
+set_global_assignment -name VERILOG_FILE ../video/video_out.v
+set_global_assignment -name VERILOG_FILE ../video/video_cram.v
+set_global_assignment -name MIF_FILE ../video/test_cram.mif
+set_global_assignment -name VERILOG_FILE ../video/video_vmem.v
+set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
+set_global_assignment -name VERILOG_FILE ../sound/sound.v
+set_global_assignment -name VERILOG_FILE ../z80/zmaps.v
+set_global_assignment -name VERILOG_FILE ../z80/znmi.v
+set_global_assignment -name VERILOG_FILE ../z80/zdos.v
+set_global_assignment -name VERILOG_FILE ../z80/zwait.v
+set_global_assignment -name VERILOG_FILE ../z80/zkbdmus.v
+set_global_assignment -name VERILOG_FILE ../z80/zports.v
+set_global_assignment -name VERILOG_FILE ../z80/zclock.v
+set_global_assignment -name VERILOG_FILE ../z80/zint.v
+set_global_assignment -name VERILOG_FILE ../z80/zmem.v
+set_global_assignment -name VERILOG_FILE ../z80/zbus.v
+set_global_assignment -name VERILOG_FILE ../vg93/vg93.v
+set_global_assignment -name VERILOG_FILE ../vg93/fapch_counter.v
+set_global_assignment -name VERILOG_FILE ../vg93/fapch_zek.v
+set_global_assignment -name VERILOG_FILE ../slave/slavespi.v
+set_global_assignment -name VERILOG_FILE ../dram/dram.v
+set_global_assignment -name VERILOG_FILE ../dram/arbiter.v
+set_global_assignment -name VERILOG_FILE ../common/clock.v
+set_global_assignment -name VERILOG_FILE ../common/spi2.v
+set_global_assignment -name VERILOG_FILE ../common/resetter.v
+set_global_assignment -name VERILOG_FILE ../top.v
+set_global_assignment -name MIF_FILE ../video/tsbuf_test.mif
 
 # Pin & Location Assignments
 # ==========================
@@ -182,6 +221,10 @@ set_location_assignment PIN_207 -to rd[15]
 set_location_assignment PIN_208 -to rd[0]
 set_location_assignment PIN_90 -to ide_d[13]
 
+# Classic Timing Assignments
+# ==========================
+set_global_assignment -name NUMBER_OF_PATHS_TO_REPORT 2000
+
 # Analysis & Synthesis Assignments
 # ================================
 set_global_assignment -name FAMILY ACEX1K
@@ -220,9 +263,9 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE top.vwf
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
-set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
-set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
+	set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
+	set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
+	set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
 
 # end CLOCK(Z80 clock)
 # --------------------
@@ -232,7 +275,7 @@ set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 cloc
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
+	set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
 
 # end CLOCK(FPGA clock)
 # ---------------------
@@ -242,7 +285,7 @@ set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
 
 	# Classic Timing Assignments
 	# ==========================
-set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
+	set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
 
 # end CLOCK(SPI clock)
 # --------------------
@@ -252,68 +295,22 @@ set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock
 
 	# Pin & Location Assignments
 	# ==========================
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[0] -disable
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vblu[1] -disable
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[0] -disable
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vred[1] -disable
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[0] -disable
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to vgrn[1] -disable
+	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
 
 	# Classic Timing Assignments
 	# ==========================
-set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
-set_instance_assignment -name CUT ON -from rddata -to zd_out
-set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
-set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
-set_instance_assignment -name CUT ON -from clkz_in -to fclk
+	set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
+	set_instance_assignment -name CUT ON -from rddata -to zd_out
+	set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
+	set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
+	set_instance_assignment -name CUT ON -from clkz_in -to fclk
 
 	# Fitter Assignments
 	# ==================
-set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
-set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
-set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spick
+	set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
 
 # end ENTITY(top)
 # ---------------
-set_global_assignment -name NUMBER_OF_PATHS_TO_REPORT 2000
-set_global_assignment -name VERILOG_FILE ../mem/dma.v
-set_global_assignment -name VERILOG_FILE ../video/video_top.v
-set_global_assignment -name VERILOG_FILE ../video/video_mode.v
-set_global_assignment -name VERILOG_FILE ../video/video_sync.v
-set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
-set_global_assignment -name VERILOG_FILE ../video/video_ts.v
-set_global_assignment -name VERILOG_FILE ../video/video_sf_ys.v
-set_global_assignment -name VERILOG_FILE ../video/video_tmbuf.v
-set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_tsbuf0.v
-set_global_assignment -name VERILOG_FILE ../video/video_tsbuf1.v
-set_global_assignment -name VERILOG_FILE ../video/video_render.v
-set_global_assignment -name VERILOG_FILE ../video/video_out.v
-set_global_assignment -name VERILOG_FILE ../video/video_cram.v
-set_global_assignment -name MIF_FILE ../video/test_cram.mif
-set_global_assignment -name VERILOG_FILE ../video/video_vmem.v
-set_global_assignment -name VERILOG_FILE ../mem/atm_pager.v
-set_global_assignment -name VERILOG_FILE ../sound/sound.v
-set_global_assignment -name VERILOG_FILE ../z80/zmaps.v
-set_global_assignment -name VERILOG_FILE ../z80/znmi.v
-set_global_assignment -name VERILOG_FILE ../z80/zdos.v
-set_global_assignment -name VERILOG_FILE ../z80/zwait.v
-set_global_assignment -name VERILOG_FILE ../z80/zkbdmus.v
-set_global_assignment -name VERILOG_FILE ../z80/zports.v
-set_global_assignment -name VERILOG_FILE ../z80/zclock.v
-set_global_assignment -name VERILOG_FILE ../z80/zint.v
-set_global_assignment -name VERILOG_FILE ../z80/zmem.v
-set_global_assignment -name VERILOG_FILE ../z80/zbus.v
-set_global_assignment -name VERILOG_FILE ../vg93/vg93.v
-set_global_assignment -name VERILOG_FILE ../vg93/fapch_counter.v
-set_global_assignment -name VERILOG_FILE ../vg93/fapch_zek.v
-set_global_assignment -name VERILOG_FILE ../slave/slavespi.v
-set_global_assignment -name VERILOG_FILE ../dram/dram.v
-set_global_assignment -name VERILOG_FILE ../dram/arbiter.v
-set_global_assignment -name VERILOG_FILE ../common/clock.v
-set_global_assignment -name VERILOG_FILE ../common/spi2.v
-set_global_assignment -name VERILOG_FILE ../common/resetter.v
-set_global_assignment -name VERILOG_FILE ../top.v
-set_global_assignment -name MIF_FILE ../video/tsbuf_test.mif
